--- a/hl_modeling.ipynb
+++ b/hl_modeling.ipynb
@@ -5,7 +5,15 @@
    "id": "e233d106-0dc1-4822-8463-a954e8f5d45b",
    "metadata": {},
    "source": [
-    "# Modeling"
+    "# Homelessness Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9573f2a6-e780-4c05-85ce-7260d6c886dc",
+   "metadata": {},
+   "source": [
+    "There was not enough time to thoroughly clean enough data between the FiSC and Homelessness datasets to accurately train a model. However, model training was attempted below with the tiny 29 observations that we were able to clean. The results are expected -- that the model cannot learn well enough on only 29 observations."
    ]
   },
   {
@@ -948,6 +956,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b59e744c-f4e3-4532-95a5-8121f6d3e53c",
+   "metadata": {},
+   "source": [
+    "There are far too few observations to create a good model for predicting homelessness."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9c47599d-0db7-48de-8bcc-4d159eca4333",
    "metadata": {},
    "source": [
@@ -955,36 +971,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "510e045a-0f65-4970-b061-87bf775fbe6c",
+   "cell_type": "markdown",
+   "id": "d8b74267-2d4c-4bd4-939f-515994a9699d",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a429ab85-e7a4-400c-befa-6959084d1d58",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a79024d8-d277-4d6f-84d2-985fb571f05f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb2f2495-7960-410d-9306-82830c2ac7d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Additional things to try with more time:\n",
+    "\n",
+    "- Cleaning up more cities and attempting to match counties with cities\n",
+    "- Finding better homelessness information that breaks out counts of homelessness into more granular data. This data had cities, counties, and even multiple counties per observation. Pure chaos.\n",
+    "- Trying more complicated models, ensembling, using neural nets."
+   ]
   }
  ],
  "metadata": {
